# Pearvision-QC

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: classes.yaml  custom_pear_defects.yaml  eclpod_pear_detector.yaml  quality_rules.yaml  thresholds.yaml  yolo_pearvision.yaml
reports/: build_fruits360_quality_v2_report.md  build_quality_roi_masked_clean_u3_dataset_report.md  compare_v2_vs_u3_roi_masked_clean.md  consolidate_fruits360_quality_v1_report.md  eclpod_inspection_report.md  final_quality_pipeline_status_v1.md  final_u3_bad_regression_corrected_labels_report.md  final_u3_bad_regression_dataset_audit.md  final_u3_bad_regression_report.md  fix_roi_masked_contact_sheets_report.md  fruits360_error_corrections_v2_report.md  fruits360_good_pear_eval_audit_report.md  fruits360_good_pear_eval_dataset_report.md  fruits360_human_review_pack001_apply_report.md  fruits360_human_review_pack002_apply_report.md  fruits360_human_review_pack003_apply_report.md  fruits360_human_review_pack004_apply_report.md  fruits360_human_review_pack005_apply_report.md  fruits360_human_review_pack006_apply_report.md  fruits360_human_review_pack007_apply_report.md  fruits360_human_review_pack008_apply_report.md  fruits360_human_review_pack009_apply_report.md  fruits360_human_review_pack010_apply_report.md  fruits360_human_review_packs_v4_report.md  fruits360_quality_classifier_v1_report.md  fruits360_quality_classifier_v2_report.md  fruits360_quality_curated_v1_report.md  fruits360_quality_curated_v1_validation.txt  fruits360_quality_unseen_eval_workflow_report.md  (+43 more)
(+89 files in other folders)
