[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.8",
    "opencv-python==4.13.0.90",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "scipy-stubs~=1.17.0",
    "ultralytics==8.4.8",
    "uvicorn>=0.47.0",
]
